objects/DE_Case_Note__c.object
<CustomObject>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>DE_Case_Notes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DE_Note__c</fullName>
        <label>DE Note</label>
        <referenceTo>DE_Note__c</referenceTo>
        <relationshipName>DE_Case_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>DE_Notes__c</fullName>
        <formula>DE_Note__r.DE_Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment Engineering Notes</label>
        <type>Text</type>
    </fields>
    <label>Deployment Engineering Case Note</label>
    <nameField>
        <displayFormat>DEC-{0000}</displayFormat>
        <label>Deployment Engineering Case Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Engineering Case Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>